# honkai-cards

./: .gitignore  MANIFEST.in  README.md  main.py  pyproject.toml
.github/workflows/: publish.yml
examples/: character_card.py  full_showcase.py  profile_card.py
src/honkai_cards/: __init__.py  api.py  client.py
src/honkai_cards/characters/: __init__.py  character1.py  relics.py  stats.py
src/honkai_cards/models/: __init__.py  build_card.py  customTeams.py  profile.py
src/honkai_cards/profile/: profile1.py
src/honkai_cards/utils/: asset_manager.py  image.py
tests/: test_asset_manager.py  test_models.py
